# BLEscan

./: .gitignore  .gitmodules  FULL_INSTALL.md  LICENSE.spdx  README.md  package.json
components/coredump_to_server/src/: coredump_to_server.c
components/coredump_to_server/test/: sdkconfig
components/esp_ibeacon_api/: CMakeLists.txt  esp_ibeacon_api.c  esp_ibeacon_api.h
components/ota_update_task/src/: ota_update_task.c
components/wifi_connect/include/: wifi_connect.h
components/wifi_connect/src/: wifi_connect.c
components/wifi_connect/test/main/: main.c
factory/: CMakeLists.txt  sdkconfig.defaults
factory/main/: CMakeLists.txt  Kconfig  main.c
scanner/: CMakeLists.txt  sdkconfig.defaults
scanner/components/esp_ibeacon_api/: CMakeLists.txt
scanner/components/esp_ibeacon_api/include/: esp_ibeacon_api.h
scanner/components/esp_ibeacon_api/src/: esp_ibeacon_api.c
scanner/main/: CMakeLists.txt  Kconfig  Kconfig.example  ble_task.c  ble_task.h  ipc.h  ipc_msgs.h  main.c  mqtt_task.c
