idf_component_register(SRCS 
                           main.c
                       INCLUDE_DIRS
                            "."
                            "../components/factory_ble_prov/include"
                            "../../scanner/components/factory_reset_task/include"
                            "../../scanner/components/ota_update_task/include"
                            "../../scanner/components/wifi_connect/include"
)